# python-mkdocs-to-confluence

./: .coveragerc  .releaserc  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  SECURITY.md  catalog-info.yaml  mkdocs.yaml  package.json  pyproject.toml
.github/workflows/: python-app.yaml
docs/: github-workflow.md  index.md
docs/examples/: admonitions.md  anchors.md  code-blocks.md  definition-lists.md  page-meta.md  showcase.md  tabs.md  task-lists.md
docs/examples/changes/: change-calendar.md  chg-template.md
docs/examples/changes/2026-07/: chg-0042-payment-gateway.md  chg-0043-db-schema-migration.md
mkdocs_to_confluence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: main.py  plugin.py
src/mkdocs_confluence_plugin/: api.py  plugin.py
tests/: README.md  test_example.py  test_plugin.py
