[build-system]
requires = ["setuptools>=61", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs_confluence_plugin"
version = "1.2.0"
description = "MkDocs plugin to export to Confluence"
readme = "README.md"
authors = [
    { name = "Your Name", email = "surjit.bains@gmail.com" }
]
dependencies = [
    "pytest==8.0.0",
    "pytest-mock==3.12.0",
    "coverage==7.4.1",
    "requests",
    "pyyaml==6.0",
    "mistune",
    "md2cf",
    "mime", 
    "pre-commit",
    "mkdocs",
    "atlassian-python-api"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "venv",
    "env",
    "dist",
    "build",
    "*.egg-info"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80

# Development dependencies
[project.optional-dependencies]
dev = [
    "mkdocs",
    "pytest",
    "coverage",
    "md2cf",
    "atlassian-python-api",
    "black"
]
