[build-system]
requires = ["setuptools>=61", "wheel", "build", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs_confluence_plugin"
version = "1.32.1"  # placeholder; semantic-release will update this
description = "MkDocs plugin to export to Confluence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Surj Bains", email = "surjit.bains@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pytest==8.0.0",
    "pytest-mock==3.12.0",
    "coverage==7.5",
    "requests",
    "pyyaml>=6.0,<7.0",
    "mistune",
    "md2cf",
    "mime",
    "pre-commit",
    "mkdocs",
    "atlassian-python-api",
    "Cython"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-dir]
"" = "src"

[project.entry-points."mkdocs.plugins"]
confluence = "mkdocs_confluence_plugin.plugin:ConfluencePlugin"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "venv",
    "env",
    "dist",
    "build",
    "*.egg-info"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 30

[project.optional-dependencies]
dev = [
    "mkdocs",
    "pytest",
    "coverage",
    "md2cf",
    "atlassian-python-api",
    "black"
]

[tool.semantic_release]
version_variable = "pyproject.toml:project.version"

[tool.semantic_release.build]
command = "python -m build"
